[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Shaders/shader.tres" type="Material" id=2]
[ext_resource path="res://Scripts/Levels/RoomLevel1.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Entities/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Shaders/Floor.tres" type="Material" id=5]
[ext_resource path="res://Scripts/Shaders/Ceiling.tres" type="Material" id=6]
[ext_resource path="res://Scenes/Props/Outside/Barrel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Props/Wardrobes/WardrobeEmpty.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Props/Wardrobes/WardrobeBooks1.tscn" type="PackedScene" id=12]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 5 )
size = Vector2( 15, 30 )

[sub_resource type="PlaneMesh" id=2]
material = ExtResource( 2 )
size = Vector2( 30, 8 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 15, 8 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2, 2, 4 )

[node name="RoomLevel1" type="Spatial" groups=[
"connect",
]]
script = ExtResource( 3 )

[node name="LevelBase" type="Spatial" parent="."]

[node name="Floor" type="CSGMesh" parent="LevelBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.05493 )
use_collision = true
mesh = SubResource( 1 )

[node name="Ceiling" type="CSGMesh" parent="LevelBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 5.05493 )
use_collision = true
invert_faces = true
mesh = SubResource( 1 )
material = ExtResource( 6 )

[node name="Wall" type="CSGMesh" parent="LevelBase"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 7.5, 4, 5 )
use_collision = true
invert_faces = true
mesh = SubResource( 2 )
material = ExtResource( 2 )

[node name="Wall2" type="CSGMesh" parent="LevelBase"]
transform = Transform( -1.62921e-07, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -1.62921e-07, 7.12149e-15, -7.5, 4, 5 )
use_collision = true
mesh = SubResource( 2 )

[node name="Wall3" type="CSGMesh" parent="LevelBase"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 4, -10 )
use_collision = true
mesh = SubResource( 3 )
material = ExtResource( 2 )

[node name="Wall4" type="CSGMesh" parent="LevelBase"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 4, 20 )
use_collision = true
invert_faces = true
mesh = SubResource( 3 )
material = ExtResource( 2 )

[node name="Doors" type="Spatial" parent="."]

[node name="Door0" parent="Doors" groups=[
"door",
] instance=ExtResource( 4 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -3, 3, 20 )
next_Scene = "RoomLevel0"

[node name="Door1" parent="Doors" groups=[
"door",
] instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 7.35, 3, 0 )
this_Id = 1
next_Scene = "RoomLevel2"
locked = true

[node name="Props" type="Spatial" parent="."]

[node name="Barrel" parent="Props" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 16 )

[node name="WardrobeEmpty" parent="Props" instance=ExtResource( 10 )]
pause_mode = 2
transform = Transform( -0.965925, 0.258819, -1.68683e-07, 1.62921e-07, -4.37114e-08, -1, -0.258819, -0.965925, 5.48219e-11, 5, 2, 2 )

[node name="WardrobeBooks1" parent="Props" instance=ExtResource( 12 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4, 0, -8.5 )

[node name="Events" type="Spatial" parent="."]

[node name="Unblock" type="Area" parent="Events"]

[node name="ClearDoor" type="CollisionShape" parent="Events/Unblock"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, -1 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Events/Unblock" to="." method="_on_Unblock_body_entered"]
